
    <resources>
        <string name="app_name">Zoe\'s Android Labs</string>
        <string name="hello_message">"You shall not pass!"</string>
        <string name="button_message">LOGIN</string>
        <string name="send">SEND</string>
        <string name="receive">RECEIVE</string>
        <string name="type_here">Type here</string>
        <string name="type">Type here</string>
        <string name="message_goes_here">Message goes here</string>
        <string name="time_goes_here">Time goes here</string>
        <string name="send_receive">Send receive goes here</string>
        <string name="databaseId">Database id goes here</string>
        <string name="todo">TODO</string>
        <string name="image">TODO</string>
        <string name="icon">icon</string>
        <string name="delete_this_item">Delete this item</string>
        <string name="about">About</string>

    </resources>